# WSim

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
MPI/: .gitignore  (+2 more)
Physics/: .gitignore  CMakeLists.txt  CMakeMacros.cmake  build.sh
Physics/Source/: CMakeLists.txt  Main.cpp  Simulation.cpp  Simulation.h
Physics/Source/Kernels/: advection.cl  apply_velocity.cl  fill.cl
Physics/Source/Kernels/pressure/: jacobi.cl
Physics/Source/Utils/: OpenCL.cpp  OpenCL.h  OpenGL.cpp  OpenGL.h
Physics/Tests/: CMakeLists.txt
Physics/Tests/KernelTests/: AdvcectionKernelTests.cpp  DivergenceKernelTests.cpp  KernelTest.h
Physics/WSim/: CMakeLists.txt
Physics/WSim/Source/: CMakeLists.txt  Main.cpp  Simulation.cpp  Simulation.h
Physics/WSim/Source/ComputeInfo/: CMakeLists.txt  Main.cpp
Physics/WSim/Source/Kernels/: controls.cl  fill.cl  pressure.cl
Physics/WSim/Source/Kernels/pressure/: apply_pressure.cl  divergence.cl
Physics/WSim/Source/Simulation/: PositionInGrid.h  Simulation.cpp  Simulation.h
Physics/WSim/Source/Utils/: ImagePair.h  OpenCL.cpp  OpenCL.h  OpenGL.cpp  OpenGL.h
Physics/WSim/Source/WSimCore/: CMakeLists.txt
Physics/WSim/Source/WSimCore/Kernels/: addVelocity.cl  advection.cl  pressure.cl  vorticityConfinement.cl
Physics/WSim/Source/WSimCore/Simulation/: BorderMaths.cpp  BorderMaths.h  PositionInGrid.h  Simulation.cpp  Simulation.h  SimulationStep.cpp  SimulationStep.h
Physics/WSim/Source/WSimCore/Utils/: ImagePair.h  KernelManager.h  OpenCL.cpp  OpenCL.h  OpenGL.cpp  OpenGL.h
Physics/WSim/Source/WSimMPI/: CMakeLists.txt  Main.cpp
Physics/WSim/Source/WSimMPI/Shaders/: Fragment.glsl  Vertex.glsl
Physics/WSim/Source/WSimMPI/master/: master.cpp  master.hpp
Physics/WSim/Source/WSimMPI/node/: OclCopyHelper.cpp  OclCopyHelper.h  node.cpp  node.hpp
Physics/WSim/Source/WSimRenderer/: CMakeLists.txt  ColorRenderer.cpp  ColorRenderer.h  Renderer.cpp  Renderer.h  VoxelRenderer.cpp  main.cpp
Physics/WSim/Source/WSimRenderer/glad/: glad.c
Physics/WSim/Source/WSimSimulation/Kernels/: fill.cl
Physics/WSim/Source/WSimSimulation/Simulation/: AbstractSimulation.h  BorderMaths.cpp  BorderMaths.h  Simulation.cpp  Simulation.h
Physics/WSim/Source/WSimStandalone/: CMakeLists.txt  Main.cpp  OpenGL.cpp  OpenGL.h
Physics/WSim/Tests/: CMakeLists.txt  Test.h
Physics/WSim/Tests/KernelTests/: AddVelocityTests.cpp  AdvectionKernelTests.cpp  DivergenceKernelTests.cpp  KernelTest.h
Physics/WSim/Tests/Simulation/: BorderMathsTests.cpp  PositionInGridTests.cpp  SimulationTests.cpp
Physics/WSim/Tests/TestUtils/: TestUtils.h
Physics/WSim/Tests/Utils/: PositionInGridTests.cpp
WSim/: CMakeLists.txt
WSim/Source/: CMakeLists.txt
WSim/Source/ComputeInfo/: CMakeLists.txt  Main.cpp
WSim/Source/LevelSetPlayground/: CMakeLists.txt  LevelSetHelper.cpp  Main.cpp
WSim/Source/WSimCommon/: ArgumentParser.h  CMakeLists.txt  DefaultFpsCallback.h  DefaultFpsCallback.hpp  EdgeHelpers.cpp  EdgeHelpers.h  EdgeHelpers.hpp  Error.h  Error.hpp  LevelSetHelper.cpp  LevelSetHelper.h  Logger.h  Logger.hpp  MainLooper.cpp  MainLooper.h  MainLooper.hpp  SimulationMode.h  Vec3.h  Vec3.hpp
WSim/Source/WSimMPI/: CMakeLists.txt  Main.cpp  Utils.h  Utils.hpp
WSim/Source/WSimMPI/Master/: Master.cpp  Master.hpp  MasterRendererInterface.hpp  MasterRendererInterface2D.cpp  MasterRendererInterface2D.hpp  MasterRendererInterface3D.cpp  MasterRendererInterface3D.hpp  MasterRendererInterfaceLevelSet3D.cpp  MasterRendererInterfaceLevelSet3D.hpp  MasterRendererInterfaceText.cpp  MasterRendererInterfaceText.hpp
WSim/Source/WSimMPI/Node/: Node.cpp  Node.hpp  NodeSimulationInterface.hpp  NodeSimulationInterfaceWater.cpp  NodeSimulationInterfaceWater.hpp  OclCopyHelper.cpp  OclCopyHelper.hpp
WSim/Source/WSimMPI/master/: MasterRendererInterface.h  MasterRendererInterfaceText.cpp  MasterRendererInterfaceText.h  MasterRendererInterfaceText.hpp  MasterRendererInterfaceVolume.cpp  MasterRendererInterfaceVolume.h  MasterRendererInterfaceVolume.hpp  MasterRendererInterfaceVoxel.cpp  MasterRendererInterfaceVoxel.h  MasterRendererInterfaceWater.cpp  MasterRendererInterfaceWater.hpp  master.cpp  master.hpp
WSim/Source/WSimMPI/node/: NodeSimulationInterface.cpp  NodeSimulationInterface.hpp  NodeSimulationInterfaceGameOfLife.cpp  NodeSimulationInterfaceGameOfLife.hpp  NodeSimulationInterfaceWater.cpp  NodeSimulationInterfaceWater.hpp  OclCopyHelper.cpp  OclCopyHelper.h  node.cpp  node.hpp
WSim/Source/WSimRenderer/: CMakeLists.txt  ColorRenderer.cpp  ColorRenderer.h  ColorRenderer.hpp  FpsCounter.h  LevelSetRenderer3D.cpp  LevelSetRenderer3D.hpp  OpenGL.cpp  OpenGL.h  OpenGL.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  VolumeRenderer.cpp  VolumeRenderer.h  VolumeRenderer.hpp  VoxelRenderer.cpp  VoxelRenderer.h  main.cpp
WSim/Source/WSimRendererExe/: CMakeLists.txt  Main.cpp
WSim/Source/WSimSimulation/: CMakeLists.txt
WSim/Source/WSimSimulation/Kernels/: addVelocity.cl  advection.cl  gravity.cl  initialize.cl  pressure.cl
WSim/Source/WSimSimulation/Simulation/: AbstractSimulation.h  BorderMaths.cpp  BorderMaths.h  BorderMaths.hpp  Simulation.cpp  Simulation.h  Simulation.hpp  SimulationStep.cpp  SimulationStep.h
WSim/Source/WSimSimulation/Utils/: ImagePair.h  ImagePair.hpp  KernelManager.cpp  KernelManager.h  KernelManager.hpp  OpenCL.cpp  OpenCL.h  OpenCL.hpp
WSim/Source/WSimStandalone/: CMakeLists.txt  ColorRendererCallbacks.h  ColorRendererCallbacks.hpp  LevelSetRendererCallbacks.hpp  Main.cpp  TextRenderer.h  TextRenderer.hpp  VolumeRendererCallbacks.h  VolumeRendererCallbacks.hpp  VoxelRendererCallbacks.h
WSim/Tests/: CMakeLists.txt
WSim/Tests/KernelTests/: AddVelocityTests.cpp  AdvectionKernelTests.cpp  CMakeLists.txt  DivergenceKernelTests.cpp  KernelTest.h
WSim/Tests/MockOpenCL/: CMakeLists.txt  Dispatch.cpp  MockOpenCL.cpp  MockOpenCL.h
WSim/Tests/Simulation/: BorderMathsTests.cpp
WSim/Tests/UnitTests/: CMakeLists.txt
WSim/Tests/UnitTests/Simulation/: BorderMathsTests.cpp  OclTest.cpp  OclTest.h  SimulationTests.cpp
(+40 files in other folders)
