# Define tests executable
get_sources(SOURCE_FILES)
add_executable(${TARGET_WSIM_TESTS} ${SOURCE_FILES})
add_dependencies(${TARGET_WSIM_TESTS} ${TARGET_WSIM_CORE_LIB})
target_link_libraries(${TARGET_WSIM_TESTS} 
    $<TARGET_FILE:gtest>
    $<TARGET_FILE:${TARGET_WSIM_CORE_LIB}>
    $<GENEX_EVAL:$<TARGET_PROPERTY:${TARGET_WSIM_CORE_LIB},LINK_LIBRARIES>>
    $<TARGET_PROPERTY:gtest,LINK_LIBRARIES>
)
target_include_directories(${TARGET_WSIM_TESTS} PRIVATE $<TARGET_PROPERTY:${TARGET_WSIM_CORE_LIB},INCLUDE_DIRECTORIES> )
target_include_directories(${TARGET_WSIM_TESTS} PRIVATE ${DIR_GTEST}/googletest/include)
target_compile_definitions(${TARGET_WSIM_TESTS} PRIVATE $<TARGET_PROPERTY:${TARGET_WSIM_CORE_LIB},COMPILE_DEFINITIONS>)
set_target_properties(${TARGET_WSIM_TESTS} PROPERTIES FOLDER Tests)
set_target_properties(${TARGET_WSIM_TESTS} PROPERTIES CXX_STANDARD 17)
