# Define tests executable
set(TARGET_WSIM_MOCK_OPENCL MockOpenCL)
get_sources(SOURCE_FILES)
add_library(${TARGET_WSIM_MOCK_OPENCL} STATIC ${SOURCE_FILES})
target_include_directories(${TARGET_WSIM_MOCK_OPENCL} PUBLIC ${DIR_WSIM} ${DIR_OPENCL_HEADERS})
set_target_properties(${TARGET_WSIM_MOCK_OPENCL} PROPERTIES FOLDER Tests)
set_target_properties(${TARGET_WSIM_MOCK_OPENCL} PROPERTIES CXX_STANDARD 17)
