# Define tests executable
set(TARGET_WSIM_UNIT_TESTS WSimUnitTests)
get_sources(SOURCE_FILES)
append_main_file_to_sources(SOURCE_FILES)
add_executable(${TARGET_WSIM_UNIT_TESTS} ${SOURCE_FILES})
add_dependencies(${TARGET_WSIM_UNIT_TESTS} ${TARGET_WSIM_SIMULATION_LIB} ${TARGET_WSIM_COMMON_LIB})
target_link_libraries(${TARGET_WSIM_UNIT_TESTS}
    $<TARGET_FILE:gtest>
    $<TARGET_PROPERTY:gtest,LINK_LIBRARIES>
    $<TARGET_FILE:${TARGET_WSIM_SIMULATION_LIB}>
    ${TARGET_WSIM_COMMON_LIB}
    MockOpenCL
)
target_include_directories(${TARGET_WSIM_UNIT_TESTS} PRIVATE $<TARGET_PROPERTY:${TARGET_WSIM_SIMULATION_LIB},INCLUDE_DIRECTORIES> )
target_include_directories(${TARGET_WSIM_UNIT_TESTS} PRIVATE ${DIR_GTEST}/googletest/include)
target_compile_definitions(${TARGET_WSIM_UNIT_TESTS} PRIVATE $<TARGET_PROPERTY:${TARGET_WSIM_SIMULATION_LIB},COMPILE_DEFINITIONS>)
set_target_properties(${TARGET_WSIM_UNIT_TESTS} PROPERTIES FOLDER Tests)
set_target_properties(${TARGET_WSIM_UNIT_TESTS} PROPERTIES CXX_STANDARD 17)
