set(TARGET_COMPUTE_INFO ComputeInfo)
add_executable(${TARGET_COMPUTE_INFO} Main.cpp)
add_dependencies(${TARGET_COMPUTE_INFO} ${TARGET_WSIM_CORE_LIB})
target_link_libraries(${TARGET_COMPUTE_INFO} ${TARGET_WSIM_CORE_LIB})
target_include_directories(${TARGET_COMPUTE_INFO} PRIVATE $<TARGET_PROPERTY:${TARGET_WSIM_CORE_LIB},INCLUDE_DIRECTORIES>)
set_target_properties(${TARGET_COMPUTE_INFO} PROPERTIES CXX_STANDARD 17)
